--- a/src/app/components/immobli/immobili-form/immobili-form.component.css
+++ b/src/app/components/immobli/immobili-form/immobili-form.component.css
@@ -1,13 +1,13 @@
-:host{
-  width:100vw;
-  height:100vh;
-  display:flex;
-  flex-direction:column;
-  justify-content:center;
-  align-items:center;
+:host {
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   padding: 30px;
 
 }
+
 form {
   width: 700px;
 
@@ -15,6 +15,7 @@ form {
   padding: 1em;
   border: 1px solid #ccc;
   border-radius: 1em;
+
 }
 
 div {
@@ -28,26 +29,45 @@ label {
 }
 
 .styleInputText {
-  border: 1px solid #CCCCCC;
+  border: 1px solid #adadad;
   padding: .5em;
   font-size: 1em;
   width: 100%;
   box-sizing: border-box;
+  border-radius: 4px;
 }
-.box-over-flow {
-  max-height: 250px;
-  border: 1px solid #CCCCCC;
-  overflow: auto;
+
+.box {
   width: 100%;
 
 }
-select{
+
+.row > * {
+
+  padding-right: 0; /* Rimuove il padding destro */
+  padding-left: 0; /* Rimuove il padding sinistro */
+
+}
+.my-custom-multiselect-dropdown .dropdown-btn .selected-item-container .selected-item {
+  border: 2px solid #007BFF !important; /* Cambiato il colore del bordo */
+  margin-right: 6px !important; /* Cambiato il margine */
+  background: #007BFF !important; /* Cambiato il colore di sfondo */
+  padding: 0 10px !important; /* Cambiato il padding */
+  color: #000 !important; /* Cambiato il colore del testo */
+  border-radius: 4px !important; /* Cambiato il raggio di bordatura */
+  float: right !important; /* Cambiato l'allineamento */
+  max-width: 300px !important;
+}
+
+
+select {
   border: 1px solid #CCCCCC;
   padding: .5em;
   font-size: 1em;
   width: 100%;
   box-sizing: border-box;
 }
+
 option {
   border: 1px solid #CCCCCC;
   padding: .5em;
@@ -73,9 +93,11 @@ button:disabled {
   color: red;
   font-size: 0.8em;
 }
+
 .pointer-cursor {
   cursor: pointer;
 }
+
 .position-relative {
   position: relative;
 }
