--- a/src/app/components/immobli/immobile-update-form/immobile-update-form.component.css
+++ b/src/app/components/immobli/immobile-update-form/immobile-update-form.component.css
@@ -4,15 +4,14 @@
   flex-direction:column;
   justify-content:center;
   align-items:center;
-
-
 }
 dialog {
   height:90vh;
+
   position: fixed;
   top: 5%;
   left: 0;
-  /*transform: translate(50%, 50%);*/
+
   border: 1px solid #ccc;
   padding: 1rem;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -35,7 +34,8 @@ dialog[open] {
 
 
 form {
-  width: 700px;
+width: 700px;
+
 
   margin: auto;
   padding: 1em;
@@ -54,18 +54,39 @@ label {
 }
 
 .styleInputText {
-  border: 1px solid #CCCCCC;
+  border: 1px solid  #adadad;
   padding: .5em;
   font-size: 1em;
   width: 100%;
   box-sizing: border-box;
+  border-radius: 4px;
 }
-.box-over-flow {
-  max-height: 250px;
-  border: 1px solid #CCCCCC;
+/*.box-over-flow {*/
+/*  max-height: 250px;*/
+/*  border: 1px solid #CCCCCC;*/
 
-  overflow: auto;
+/*  overflow: auto;*/
+/*  width: 100%;*/
+/*}*/
+  .box {
+
   width: 100%;
+}
+.row > * {
+
+  padding-right: 0; /* Rimuove il padding destro */
+  padding-left: 0;  /* Rimuove il padding sinistro */
+
+}
+.my-custom-multiselect-dropdown .dropdown-btn .selected-item-container .selected-item {
+  border: 2px solid #007BFF !important; /* Cambiato il colore del bordo */
+  margin-right: 6px !important; /* Cambiato il margine */
+  background: #007BFF !important; /* Cambiato il colore di sfondo */
+  padding: 0 10px !important; /* Cambiato il padding */
+  color: #000 !important; /* Cambiato il colore del testo */
+  border-radius: 4px !important; /* Cambiato il raggio di bordatura */
+  float: right !important; /* Cambiato l'allineamento */
+  max-width: 300px !important;
 }
 select{
   border: 1px solid #CCCCCC;
