--- a/src/app/components/proprietari/proprietari-form/proprietari-form.component.html
+++ b/src/app/components/proprietari/proprietari-form/proprietari-form.component.html
@@ -16,17 +16,32 @@
     </div>
   </div>
   <div>
-    <h5>Immobili Diponibili:</h5>
-    <div class="row box-over-flow">
-      <div class="col-4 form-check d-flex justify-content-center align-items-center"
-           *ngFor="let immobile of listaImmobiliNOProp; let i = index">
-        <input class="form-check-input m-2" type="checkbox" [id]="'noPropCheck' + i"
-               (change)="onCheckboxChange($event, immobile)">
-        <label class="form-check-label" [for]="'noPropCheck' + i">
-          {{ immobile.tipo }}
-        </label>
+    <label>Immobili Disponibili:</label>
+    <div class="d-flex justify-content-center align-items-center">
+      <div class="row box ">
+        <div class="col-12">
+          <ng-multiselect-dropdown class="my-custom-multiselect-dropdown"
+            [settings]="dropdownSettings"
+            [data]="listaImmobiliNOProp"
+            formControlName="listaImmobiliDTO"
+            (onSelect)="onItemSelect($event)"
+            (onDeSelect)="onItemDeSelect($event)"
+            (onSelectAll)="onSelectAll($event)">
+          </ng-multiselect-dropdown>
+        </div>
       </div>
     </div>
+<!--    <h5>Immobili Diponibili:</h5>-->
+<!--    <div class="row box-over-flow">-->
+<!--      <div class="col-4 form-check d-flex justify-content-center align-items-center"-->
+<!--           *ngFor="let immobile of listaImmobiliNOProp; let i = index">-->
+<!--        <input class="form-check-input m-2" type="checkbox" [id]="'noPropCheck' + i"-->
+<!--               (change)="onCheckboxChange($event, immobile)">-->
+<!--        <label class="form-check-label" [for]="'noPropCheck' + i">-->
+<!--          {{ immobile.tipo }}-->
+<!--        </label>-->
+<!--      </div>-->
+<!--    </div>-->
     <div class="d-flex flex-row justify-content-evenly">
       <button type="submit">iniva</button>
       <button routerLink="/proprietariTable">indietro</button>
