--- a/src/app/components/proprietari/proprietario-update-form/proprietario-update-form.component.css
+++ b/src/app/components/proprietari/proprietario-update-form/proprietario-update-form.component.css
@@ -59,13 +59,46 @@ label {
   font-size: 1em;
   width: 100%;
   box-sizing: border-box;
+  border-radius: 4px;
 }
-.box-over-flow {
-  max-height: 250px;
-  border: 1px solid #CCCCCC;
-  border-radius: 5px;
-  overflow: auto;
+/*.box-over-flow {*/
+/*  max-height: 250px;*/
+/*  border: 1px solid #CCCCCC;*/
+/*  border-radius: 5px;*/
+/*  overflow: auto;*/
+/*}*/
+.box {
+  width: 100%;
+
 }
+
+.row > * {
+
+  padding-right: 0; /* Rimuove il padding destro */
+  padding-left: 0; /* Rimuove il padding sinistro */
+
+}
+.my-custom-multiselect-dropdown .dropdown-btn .selected-item-container .selected-item {
+  border: 2px solid #007BFF !important; /* Cambiato il colore del bordo */
+  margin-right: 6px !important; /* Cambiato il margine */
+  background: #007BFF !important; /* Cambiato il colore di sfondo */
+  padding: 0 10px !important; /* Cambiato il padding */
+  color: #000 !important; /* Cambiato il colore del testo */
+  border-radius: 4px !important; /* Cambiato il raggio di bordatura */
+  float: right !important; /* Cambiato l'allineamento */
+max-width: 300px !important;
+}
+/*::ng-deep .my-custom-multiselect-dropdown .dropdown-btn .selected-item-container .selected-item {*/
+/*  border: 2px solid #ff5733 !important; !* Cambiato il colore del bordo *!*/
+/*  margin-right: 6px !important; !* Cambiato il margine *!*/
+/*  background: #ff5733 !important; !* Cambiato il colore di sfondo *!*/
+/*  padding: 0 10px !important; !* Cambiato il padding *!*/
+/*  color: #000 !important; !* Cambiato il colore del testo *!*/
+/*  border-radius: 4px !important; !* Cambiato il raggio di bordatura *!*/
+/*  float: right !important; !* Cambiato l'allineamento *!*/
+/*  max-width: 300px !important;*/
+/*}*/
+
 select{
   border: 1px solid #CCCCCC;
   padding: .5em;
