--- a/src/app/components/proprietari/proprietariTable/proprietari.component.html
+++ b/src/app/components/proprietari/proprietariTable/proprietari.component.html
@@ -1,7 +1,7 @@
 <button class="btn btn-success ms-5 mt-5" routerLink="/proprietariForm"><i class="fa-solid fa-plus"></i></button>
 
 <div class="d-flex justify-content-center align-items-center flex-direction-column">
-  <table class="table table-bordered table-dark table-striped table-hover m-5">
+  <table class="table table-bordered  table-hover m-3">
     <thead>
     <tr>
       <th scope="col">azioni</th>
@@ -14,8 +14,8 @@
       @for(prop of listProp; track prop.id){
         <tr>
           <th scope="row" class="d-flex justify-content-evenly">
-            <button class="btn btn-warning rounded-circle" (click)="openDialogUpdate(prop)"><i class="fa-solid fa-pen-nib" style="color: #000000;"></i></button>
-            <button class="btn btn-danger rounded-circle" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="selectProp(prop)" ><i class="fa-solid fa-trash" style="color: #000000;"></i></button>
+            <button class="btn btn-dark" (click)="openDialogUpdate(prop)"><i class="fa-solid fa-pen-nib" style="color: #fff000;"></i></button>
+            <button class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="selectDeleteProp(prop)" ><i class="fa-solid fa-trash" style="color: #FF0000;"></i></button>
 
           </th>
           <td>{{prop.nome}}</td>
@@ -43,14 +43,14 @@
         confermi di voler eliminare questo proprietario?
         <ul>
           <p class="m-0 mt-3"><small>nome</small></p>
-          <li>{{selectedProp?.nome }}</li>
+          <li>{{deletedProp?.nome }}</li>
           <p class="m-0 mt-3"><small>cognome</small></p>
-          <li>{{selectedProp?.cognome }}</li>
+          <li>{{deletedProp?.cognome }}</li>
         </ul>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-danger" data-bs-dismiss="modal" (click)="deleteProp(selectedProp!.id!)">Elimina</button>
+        <button type="button" class="btn btn-danger" data-bs-dismiss="modal" (click)="deleteProp(deletedProp!.id!)">Elimina</button>
       </div>
     </div>
   </div>
@@ -58,4 +58,5 @@
 
 <app-immobile-dialog ></app-immobile-dialog>
 
-<app-proprietario-update-form [proprietario]="selectedProp"></app-proprietario-update-form>
+  <app-proprietario-update-form [proprietario]="selectedProp"></app-proprietario-update-form>
+
