--- a/src/app/components/immobli/immobile-update-form/immobile-update-form.component.html
+++ b/src/app/components/immobli/immobile-update-form/immobile-update-form.component.html
@@ -10,7 +10,6 @@
         <option class="error" *ngFor="let option of immobiliOptions" [ngValue]="option.value">
           {{ option.label }}
         </option>
-
       </select>
       <div class="error" *ngIf="!isValid &&  immobiliForm.get('tipo')?.invalid ">
         campo è obbligatorio.
@@ -37,11 +36,6 @@
     </div>
 
     <div>
-      <!--      <label for="superfice">Superficie:</label>-->
-      <!--      <input id="superfice" class="styleInputText" type="text" formControlName="superfice" appSquareMeters>-->
-      <!--      <div *ngIf="immobiliForm.get('superfice')?.invalid && immobiliForm.get('superfice')?.touched">-->
-      <!--        campo è obbligatorio.-->
-      <!--      </div>-->
       <label for="superfice">Superficie:</label>
       <div class="position-relative">
         <input id="superfice" class="styleInputText" type="number" formControlName="superfice">
@@ -59,32 +53,6 @@
         campo è obbligatorio.
       </div>
     </div>
-<!--    <label>annessi Diponibili:</label>-->
-<!--    <div class=" d-flex justify-content-center align-items-center">-->
-<!--      <div class="row box-over-flow">-->
-<!--        <div class="col-4 form-check d-flex justify-content-center align-items-center"-->
-<!--             *ngFor="let annesso of listaAnnessiNoIMMBL; let i = index">-->
-<!--          <input class="form-check-input m-2" type="checkbox" [id]="'noPropCheck' + i"-->
-<!--                 (change)="onCheckboxChange($event, annesso)">-->
-<!--          <label class="form-check-label" [for]="'noPropCheck' + i">-->
-<!--            {{ annesso.tipo }} | mq: {{ annesso.superficie }}-->
-<!--          </label>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--    <label>annessi di {{ immobile?.proprietariDTO?.nome }} {{ immobile?.proprietariDTO?.cognome }}:</label>-->
-<!--    <div class=" d-flex justify-content-center align-items-center">-->
-<!--      <div class="row box-over-flow">-->
-<!--        <div class="col-4 form-check d-flex justify-content-center align-items-center"-->
-<!--             *ngFor="let annesso of immobile?.listaAnnessiDTO; let i = index">-->
-<!--          <input class="form-check-input me-2" type="checkbox" [id]="'noPropCheck' + i" [checked]="true"-->
-<!--                 (change)="onCheckboxChange($event, annesso)">-->
-<!--          <label class="form-check-label" [for]="'noPropCheck' + i">-->
-<!--            {{ annesso.tipo }} | mq: {{ annesso.superficie }}-->
-<!--          </label>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </div>-->
     <label>Annessi Disponibili:</label>
     <div class="d-flex justify-content-center align-items-center">
       <div class="row box p-0">
@@ -95,7 +63,8 @@
                                    formControlName="listaAnnessiDTO"
                                    (onSelect)="onItemSelect($event)"
                                    (onDeSelect)="onItemDeSelect($event)"
-                                   (onSelectAll)="onSelectAll($event)">
+                                   (onSelectAll)="onSelectAll($event)"
+                                   (onDeSelectAll)="onDeSelectAll()">
           </ng-multiselect-dropdown>
 
 
@@ -108,32 +77,28 @@
       <label for="proprietariDTO">Proprietario: <small>(facoltativo)</small></label>
       <select id="proprietariDTO" formControlName="proprietariDTO">
 
-        <ng-container *ngIf="!oldProp">
-          <option [value]="null">
-            nessun Proprietario
-          </option>
-          <option *ngFor="let prop of listaProprietari" [value]="serializeProprietario(prop)">
-            {{ prop.id }} | {{ prop.nome }} {{ prop.cognome }}
-          </option>
-        </ng-container>
+        <option *ngIf="!oldProp" [value]="null" disabled selected>
+          Scegli un proprietario...
+        </option>
+        <option [value]="null">
+          nessun Proprietario
+        </option>
+        <option *ngIf="oldProp" [value]="serializeProprietario(oldProp)" selected>
+          {{ oldProp.nome }} | {{ oldProp.cognome }}
+        </option>
+        <option *ngFor="let prop of listaProprietari" [value]="serializeProprietario(prop)">
 
-        <ng-container *ngIf="oldProp">
-          <option [value]="serializeProprietario(oldProp)" selected>
-            {{ oldProp.nome }} | {{ oldProp.cognome }}
-          </option>
-          <option [value]="null">
-            nessun Proprietario
-          </option>
-          <option *ngFor="let prop of listaProprietari" [value]="serializeProprietario(prop)">
-            {{ prop.id }} | {{ prop.nome }} {{ prop.cognome }}
-          </option>
-        </ng-container>
+          {{ prop.nome }} {{ prop.cognome }}
 
+        </option>
       </select>
+    </div>
+    <div class="error" *ngIf="!isValid &&  immobiliForm.get('proprietariDTO')?.invalid">
+      campo è obbligatorio.
     </div>
 
     <div class="d-flex flex-row justify-content-evenly">
-      <button type="submit">iniva</button>
+      <button type="submit">Modifica</button>
       <button type="button" (click)="onClose()">Chiudi</button>
     </div>
 
