--- a/src/app/components/immobli/immobiliTable/immobili.component.html
+++ b/src/app/components/immobli/immobiliTable/immobili.component.html
@@ -1,39 +1,43 @@
 <button class="btn btn-success ms-5 mt-5" routerLink="/immobiliForm"><i class="fa-solid fa-plus"></i></button>
 
 <div class="d-flex justify-content-center align-items-center flex-direction-column">
-  <table class="table table-bordered table-dark table-striped table-hover m-5">
-  <thead>
-  <tr>
-    <th scope="col">azioni</th>
-    <th scope="col">tipo</th>
-    <th scope="col">vani</th>
-    <th scope="col">costo</th>
-    <th scope="col">superficie</th>
-    <th scope="col">anno</th>
-    <th scope="col">proprietario</th>
-    <th scope="col">tot annessi</th>
+  <table class="table table-bordered  table-hover m-3">
+    <thead>
+    <tr>
+      <th scope="col">azioni</th>
+      <th scope="col">tipo</th>
+      <th scope="col">vani</th>
+      <th scope="col">costo</th>
+      <th scope="col">superficie</th>
+      <th scope="col">anno</th>
+      <th scope="col">proprietario</th>
+      <th scope="col">tot annessi</th>
 
-  </tr>
-  </thead>
-  <tbody>
-  <tr *ngFor="let immobile of listaImmobili" >
-    <th scope="row" class="d-flex justify-content-evenly">
-      <button class="btn btn-warning rounded-circle" (click)="openDialogUpdate(immobile)"><i class="fa-solid fa-pen-nib" style="color: #000000;"></i></button>
-      <button class="btn btn-danger rounded-circle" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="selectImmobile(immobile)"><i class="fa-solid fa-trash" style="color: #000000;"></i></button>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let immobile of listaImmobili">
+      <th scope="row" class="d-flex justify-content-evenly">
+        <button class=" btn btn-dark" (click)="openDialogUpdate(immobile)"><i
+          class="fa-solid fa-pen-nib shadow" style="color:  #fff000;"></i></button>
+        <button class=" btn btn-dark" data-bs-toggle="modal" data-bs-target="#exampleModal"
+                (click)="selectDeleteImmobile(immobile)"><i class="fa-solid fa-trash" style="color: #FF0000;"></i></button>
 
 
-    </th>
-    <td>{{ immobile.tipo }}</td>
-    <td>{{ immobile.vani }}</td>
-    <td>{{ immobile.costo | currency:'EUR' }}</td>
-    <td>{{ immobile.superfice | squareMeter }}</td>
-    <td>{{ immobile.anno }}</td>
-    <td (click)="openDialogProp(immobile.proprietariDTO)">{{ immobile.proprietariDTO ?  immobile.proprietariDTO.nome + ' ' + immobile.proprietariDTO.cognome : 'ND'}}</td>
-    <td (click)="openDialogAnnessi( immobile.listaAnnessiDTO)">{{ immobile.listaAnnessiDTO.length }}</td>
+      </th>
+      <td>{{ immobile.tipo }}</td>
+      <td>{{ immobile.vani }}</td>
+      <td>{{ immobile.costo | currency:'EUR' }}</td>
+      <td>{{ immobile.superfice | squareMeter }}</td>
+      <td>{{ immobile.anno }}</td>
+      <td
+        (click)="openDialogProp(immobile.proprietariDTO)">{{ immobile.proprietariDTO ? immobile.proprietariDTO.nome + ' ' + immobile.proprietariDTO.cognome : 'ND' }}
+      </td>
+      <td (click)="openDialogAnnessi( immobile.listaAnnessiDTO)">{{ immobile.listaAnnessiDTO.length }}</td>
 
-  </tr>
-  </tbody>
-</table>
+    </tr>
+    </tbody>
+  </table>
 </div>
 <!--modaledi conferma delete-->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -46,27 +50,32 @@
       <div class="modal-body text-dark">
         Confermi di voler eliminare l' immobile?
         <ul>
-          <p class="m-0 mt-3"><small >tipo</small></p>
-          <li>{{selectedImmobile?.tipo}}</li>
+          <p class="m-0 mt-3"><small>tipo</small></p>
+          <li>{{ immobileDeleted?.tipo }}</li>
           <p class="m-0 mt-3"><small>vani</small></p>
-          <li>{{selectedImmobile?.vani}}</li>
+          <li>{{ immobileDeleted?.vani }}</li>
           <p class="m-0 mt-3"><small>costo</small></p>
-          <li>{{selectedImmobile?.costo|currency:'EUR'}}</li>
+          <li>{{ immobileDeleted?.costo|currency:'EUR' }}</li>
           <p class="m-0 mt-3"><small>superficie</small></p>
-          <li>{{selectedImmobile?.superfice ?selectedImmobile!.superfice : 0 | squareMeter}}</li>
+          <li>{{ immobileDeleted?.superfice ? immobileDeleted!.superfice : 0 | squareMeter }}</li>
           <p class="m-0 mt-3"><small>anno costruzione</small></p>
-          <li>{{selectedImmobile?.anno}}</li>
+          <li>{{ immobileDeleted?.anno }}</li>
         </ul>
 
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annulla</button>
-        <button type="button" class="btn btn-danger" data-bs-dismiss="modal" (click)="deleteimmobile(selectedImmobile!.id!)">Elimina</button>
+        <button type="button" class="btn btn-danger" data-bs-dismiss="modal"
+                (click)="deleteimmobile(immobileDeleted!.id!)">Elimina
+        </button>
       </div>
     </div>
   </div>
 </div>
 
-<app-proprietario-dialog ></app-proprietario-dialog>
-<app-annesso-dialog ></app-annesso-dialog>
+<app-proprietario-dialog></app-proprietario-dialog>
+<app-annesso-dialog></app-annesso-dialog>
 <app-immobile-update-form [immobile]="selectedImmobile"></app-immobile-update-form>
+
+
+
