--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -13,3 +13,11 @@
   border-radius:50% !important;
   margin:20px ;
 }
+
+.navbar {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.navbar-nav .nav-item .nav-link:hover {
+  color: #ffc107 !important;
+}
