--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,11 +1,33 @@
+<!--<nav class="navbar navbar-expand-lg navbar-dark bg-dark d-flex justify-content-around align-items-center">-->
+<!--  <div class="navbar-brand logo" routerLink="/"></div>-->
+<!--  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">-->
+<!--    <span class="navbar-toggler-icon"></span>-->
+<!--  </button>-->
+<!--  <div class="w-100">-->
+<!--    <ul class="navbar-nav d-flex justify-content-evenly align-items-center">-->
+<!--      <li class="nav-item ">-->
+<!--        <a class="nav-link" routerLink="/home" routerLinkActive="active">Home</a>-->
+<!--      </li>-->
+<!--      <li class="nav-item">-->
+<!--        <a class="nav-link" routerLink="/proprietariTable" routerLinkActive="active">Proprietari</a>-->
+<!--      </li>-->
+<!--      <li class="nav-item">-->
+<!--        <a class="nav-link" routerLink="/immobiliTable" routerLinkActive="active">Immobili</a>-->
+<!--      </li>-->
+<!--      <li class="nav-item">-->
+<!--        <a class="nav-link" routerLink="/annessiTable" routerLinkActive="active">Annessi</a>-->
+<!--      </li>-->
+<!--    </ul>-->
+<!--  </div>-->
+<!--</nav>-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark d-flex justify-content-around align-items-center">
   <div class="navbar-brand logo" routerLink="/"></div>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="w-100">
-    <ul class="navbar-nav d-flex justify-content-evenly align-items-center">
-      <li class="nav-item ">
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav d-flex justify-content-evenly align-items-center w-100">
+      <li class="nav-item">
         <a class="nav-link" routerLink="/home" routerLinkActive="active">Home</a>
       </li>
       <li class="nav-item">
