search proprietari in lavorazione

--- a/src/app/components/annessi/annessi-update-form/annessi-update-form.component.html
+++ b/src/app/components/annessi/annessi-update-form/annessi-update-form.component.html
@@ -41,7 +41,7 @@
         <option [value]="null">
           nessun Immobile
         </option>
-        <option *ngFor="let immobile of listaImmobili" [value]="immobile">
+        <option *ngFor="let immobile of listaImmobili" [value]="serializeImmobile(immobile)">
           {{ immobile.tipo }} | prop: {{ immobile.proprietariDTO ? immobile.proprietariDTO.cognome : 'ND' }}
         </option>
       </select>
