--- a/src/app/components/annessi/annessiTable/annessi.component.html
+++ b/src/app/components/annessi/annessiTable/annessi.component.html
@@ -68,19 +68,18 @@
 
 
 <!--<router-outlet></router-outlet>-->
-<div class="row justify-content-between flex-row p-3">
-  <div class="col-6 align-content-end">
+<div class="row justify-content-between flex-row px-3">
+  <div class="col-6 align-content-end ps-3">
     <input type="text"  [formControl]="searchInput" placeholder="Enter keyword" />
   </div>
 
-  <div *ngIf="errorMessage">
-    <p class="error">{{ errorMessage }}</p>
-  </div>
-  <div class="col-6">
+  <div class="col-6 d-flex justify-content-end align-content-end pe-3 ">
     <button class="btn btn-success mt-5 ms-5" routerLink="/annessiForm"><i class="fa-solid fa-plus"></i></button>
   </div>
 </div>
-
+<div *ngIf="errorMessage">
+  <p class="error">{{ errorMessage }}</p>
+</div>
 <div class="d-flex justify-content-center align-items-center flex-direction-column">
   <table class="table table-bordered table-hover m-3">
     <thead>
