--- a/src/app/components/proprietari/proprietariTable/proprietari.component.css
+++ b/src/app/components/proprietari/proprietariTable/proprietari.component.css
@@ -5,3 +5,9 @@ tr:hover {
 tr{
   transition-duration: 0.4s;
 }
+input{
+  padding:10px;
+  border-radius: 4px;
+  border: 1px solid gray;
+  background-color: white;
+}
