register/login/logout/authService/authGuard

--- a/src/app/components/annessi/annessi-form/annessi-form.component.html
+++ b/src/app/components/annessi/annessi-form/annessi-form.component.html
@@ -37,7 +37,7 @@
 
   </div>
   <div class="d-flex justify-content-evenly ">
-    <button type="submit">iniva</button>
+    <button type="submit">invia</button>
     <button routerLink="/annessiTable">indietro</button>
   </div>
 
