--- a/src/app/components/immobli/immobili-form/immobili-form.component.html
+++ b/src/app/components/immobli/immobili-form/immobili-form.component.html
@@ -80,7 +80,7 @@
     campo è obbligatorio.
   </div>
   <div class="d-flex flex-row justify-content-evenly">
-    <button type="submit">iniva</button>
+    <button type="submit">invia</button>
     <button routerLink="/immobiliTable">indietro</button>
   </div>
 
