--- a/src/app/components/proprietari/proprietari-form/proprietari-form.component.html
+++ b/src/app/components/proprietari/proprietari-form/proprietari-form.component.html
@@ -43,7 +43,7 @@
 <!--      </div>-->
 <!--    </div>-->
     <div class="d-flex flex-row justify-content-evenly">
-      <button type="submit">iniva</button>
+      <button type="submit">invia</button>
       <button routerLink="/proprietariTable">indietro</button>
     </div>
   </div>
